--- a/index.html
+++ b/index.html
@@ -9,50 +9,11 @@
 </head>
 
 <body>
-  <!-- Hello World program using HTML -->
-  <!-- <div id="root">
-    <h1>Hello World!</h1>
-  </div> -->
-
-  <!-- Hello World program using JAVASCRIPT -->
-  <!-- <div id="root"></div>
-  <script>
-    const heading = document.createElement("h1")
-    heading.innerHTML = "Hello World using Javascript!"
-
-    const root = document.getElementById("root")
-    root.appendChild(heading)
-  </script> -->
-
-  <!-- React is a LIBRARY -->
-  <!-- <div id="header">
-    <h1>Akshay</h1>
-  </div> -->
-
-  <!-- root.render method -->
-  <!-- <div id="root">
-    <h1>Akshay is here</h1>
-  </div> -->
-
-  <!-- html elements on Top and Below of the root -->
-  <!-- <h1>Hello top of the root</h1>
   <div id="root">
-    <h1>Akshay is here</h1>
+    <h1>Akshay is here!</h1>
   </div>
-  <h1>Hello bottom of the root</h1> -->
 
-  <!-- Using REACT -->
-  <div id="root"></div>
-
-  <!-- ORDER of Files -->
-  <!-- <script src="./App.js"></script> -->
-
-  <!-- CDN - React -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-  <!-- React Code - JS Code link -->
-  <script src="./App.js"></script>
+  <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
